--- a/web/views/index/hadd.html
+++ b/web/views/index/hadd.html
@@ -13,6 +13,10 @@
                         <input class="form-control" type="text" name="host" placeholder="域名">
                     </div>
                     <div class="form-group">
+                        <label class="control-label">URL路由(可忽略)</label>
+                        <input class="form-control" type="text" name="location" placeholder="URL路由">
+                    </div>
+                    <div class="form-group">
                         <label class="control-label">客户端id</label>
                         <input value="{{.client_id}}" class="form-control" type="text" name="client_id"
                                placeholder="客户端id">
