--- a/web/views/index/index.html
+++ b/web/views/index/index.html
@@ -107,7 +107,7 @@
                 radius : '55%',
                 center: ['50%', '60%'],
                 data:[
-                    {value:{{.data.tunnelServerCount}}, name:'tcp隧道数'},
+                    {value:{{.data.tcpServerCount}}, name:'tcp隧道数'},
                     {value:{{.data.socks5ServerCount}}, name:'socks5隧道数'},
                     {value:{{.data.httpProxyServerCount}}, name:'http隧道数'},
                     {value:{{.data.udpServerCount}}, name:'udp隧道数'},
