Ip限制 npc代理连接

--- a/web/views/index/hlist.html
+++ b/web/views/index/hlist.html
@@ -9,6 +9,7 @@
                         <th>客户端id</th>
                         <th>备注</th>
                         <th>host</th>
+                        <th>location</th>
                         <th>内网目标</th>
                         <th>host改写</th>
                         <th>压缩方式</th>
@@ -77,6 +78,7 @@
                 {data: 'Remark'},
                 {data: 'Remark'},
                 {data: 'Host'},
+                {data: 'Location'},
                 {data: 'Target'},
                 {data: 'HostChange'},
                 {data: 'HostChange'},
