--- a/web/views/client/add.html
+++ b/web/views/client/add.html
@@ -16,6 +16,10 @@
                         <label class="control-label">速度限制(单位：KB，为空不限制)</label>
                         <input class="form-control" type="text" name="rate_limit" placeholder="为空不限制">
                     </div>
+                    <div class="form-group" id="max_conn">
+                        <label class="control-label">最大客户端连接数</label>
+                        <input class="form-control" type="text" name="max_conn" placeholder="为空不限制">
+                    </div>
                     <div class="form-group" id="u">
                         <label class="control-label">验证用户名(仅socks5,web穿透支持)</label>
                         <input class="form-control" type="text" name="u" placeholder="不填则无需验证">
