--- a/web/views/index/index.html
+++ b/web/views/index/index.html
@@ -10,8 +10,8 @@
     <div class="col-md-3">
         <div class="widget-small danger coloured-icon"><i class="icon fa fa-home fa-3x"></i>
             <div class="info">
-                <h4>域名解析数</h4>
-                <p><b>{{.data.hostCount}}</b></p>
+                <h4>当前TCP连接总数</h4>
+                <p><b>{{.data.tcpCount}}</b></p>
             </div>
         </div>
     </div>
