--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -51,9 +51,11 @@
         <li><a class="app-menu__item {{if eq "udp" .menu}}active{{end}}" href="/index/udp"><i
                 class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">udp隧道管理</span></a></li>
         <li><a class="app-menu__item {{if eq "socks5" .menu}}active{{end}}" href="/index/socks5"><i
-                class="app-menu__icon fa fa-lightbulb-o"></i><span class="app-menu__label">socks5代理</span></a></li>
+                class="app-menu__icon fa fa-lightbulb-o"></i><span class="app-menu__label">socks5代理管理</span></a></li>
         <li><a class="app-menu__item {{if eq "http" .menu}}active{{end}}" href="/index/http"><i
-                class="app-menu__icon fa fa-magic"></i><span class="app-menu__label">http代理</span></a></li>
+                class="app-menu__icon fa fa-magic"></i><span class="app-menu__label">http代理管理</span></a></li>
+        <li><a class="app-menu__item {{if eq "secret" .menu}}active{{end}}" href="/index/secret"><i
+                class="app-menu__icon fa fa-dashcube"></i><span class="app-menu__label">私密代理管理</span></a></li>
         <li><a class="app-menu__item {{if eq "help" .menu}}active{{end}}" href="/index/help"><i
                 class="app-menu__icon fa fa-question-circle"></i><span class="app-menu__label">使用说明</span></a></li>
     </ul>
