--- a/web/views/client/add.html
+++ b/web/views/client/add.html
@@ -28,6 +28,10 @@
                         <label class="control-label">验证密码(仅socks5,web穿透支持)</label>
                         <input class="form-control" type="text" name="p" placeholder="不填则无需验证">
                     </div>
+                    <div class="form-group" id="vkey">
+                        <label class="control-label">客户端连接密钥(唯一、不填将会自动生成)</label>
+                        <input class="form-control" type="text" name="vkey" placeholder="客户端连接密钥">
+                    </div>
                     <div class="form-group" id="compress">
                         <label class="control-label">数据压缩方式</label>
                         <select class="form-control" name="compress">
